[package]
name = "vfsstat_rs"
version = "0.1.0"
edition = "2018"
authors = ["Manos Pitsidianakis <epilys@nessuent.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","staticlib"]


[dependencies]
#rusqlite = { version= "0.25.3" } #, features = ["bundled", ]}
#libsqlite3-sys = "0.22.2"
env_logger = "0.9.0"
log = "0.4.0"
